objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>CMN_IllustrativeSurrenderValueDate__c</fullName>
        <description>Used for integration to populate the Illustrative Surrender Value Date from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Surrender Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeSurrenderValue__c</fullName>
        <description>Used for integration to populate the Illustrative Surrender Value from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Surrender Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueAge__c</fullName>
        <description>Used for integration to populate the Illustrative Value Age from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueDate__c</fullName>
        <description>Used for integration to populate the Illustrative Value Date from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueRate__c</fullName>
        <description>Used for integration to populate the Illustrative Value percentage from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValue__c</fullName>
        <description>Used for integration to populate the Illustrative Value from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_IncomeDrawdown__c</fullName>
        <description>Used for integration to populate the Income Drawdown from source (Compass/Lifestyle)</description>
        <label>Income Drawdown</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_LastWithdrawalPaidDate__c</fullName>
        <description>Used for integration to populate the Last Withdrawal Paid Date from source systems (Compass/Lifestyle).</description>
        <label>Last Withdrawal Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_LoanInterestRate__c</fullName>
        <description>Used for integration to populate the Loan interest rate percentage from source systems (Compass/Lifestyle).</description>
        <label>Loan Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_MasterAccountRecordTypeName__c</fullName>
        <description>A field created to hold the master account record type. This field will be used to share the contract with all service console users to have a read only access to the contract.</description>
        <label>Master Account Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_NonGuaranteedInvestmentAmount__c</fullName>
        <description>Used for integration to populate Non-Guaranteed Investment Amount from source systems (Compass/Lifestyle)</description>
        <label>Non-Guaranteed Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_OIPTotalInvestedAmountToDate__c</fullName>
        <description>Used for integration to populate Total Invested Amount to date in Other Investment Portfolio from source systems (Compass)</description>
        <label>OIP Total Invested Amount to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_OngoingAdviceFeeAnnualGrowth__c</fullName>
        <description>Used for integration to populate OngoingAdviceFeeGrowth  from source systems (Compass)</description>
        <label>Ongoing Advice Fee Annual Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_OngoingAdviceFeeAnnual__c</fullName>
        <description>Used for integration to populate OngoingAdviceFeeAnnual  from source systems (Compass)</description>
        <label>Ongoing Advice Fee Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_OngoingAdviceFeeEIF__c</fullName>
        <description>Used for integration to populate OngoingAdviceFeeEIF  from source systems (Compass)</description>
        <label>Ongoing Advice Fee EIF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_OngoingAdviceFeeOIP__c</fullName>
        <description>Used for integration to populate OngoingAdviceFeeOIP  from source systems (Compass)</description>
        <label>Ongoing Advice Fee OIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_OptionDate__c</fullName>
        <description>The date when an option can be exercised</description>
        <label>Option Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_OriginalCommencementDate__c</fullName>
        <description>Used for integration to populate the Original Commencement Date from source systems (Compass/Lifestyle).</description>
        <label>Original Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_OriginalOptionDate__c</fullName>
        <description>Used for integration to populate the Original Option Date from source systems (Compass/Lifestyle).</description>
        <label>Original Option Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_OriginalRetirementDate__c</fullName>
        <description>Used for integration to populate the Original Retirement Date from source systems (Compass/Lifestyle).</description>
        <label>Original Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_PaidUpDeathValue__c</fullName>
        <description>Used for integration to populate Paid Up Death Value from source systems (Compass/Lifestyle).</description>
        <label>Paid Up Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_PaidUpPremiumAmount__c</fullName>
        <description>Used for integration to populate Paid Up Premium Amount from source systems (Compass/Lifestyle).</description>
        <label>Paid Up Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_PaidtoDate__c</fullName>
        <description>Used for integration to populate Paid to Date from source systems (Compass/Lifestyle)</description>
        <label>Paid to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_ParticipationDate__c</fullName>
        <description>Used for integration to populate the Participation Date from source systems (Compass/Lifestyle).</description>
        <label>Participation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_PayPointNumber__c</fullName>
        <description>Used for integration to populate Pay Point Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Pay Point Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PaymentHoldStatusIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate the Payment on hold Status Indicator from source (Compass/Lifestyle).</description>
        <label>Payment Hold Status Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_PaymentHoldStatus__c</fullName>
        <description>Used for integration to populate the Payment on hold Status Code from source (Compass/Lifestyle).</description>
        <label>Payment Hold Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Annuity Prop Esc Hld</fullName>
                    <label>Annuity Property Escalation on Hold</label>
                </value>
                <value>
                    <fullName>Amendment Hold</fullName>
                </value>
                <value>
                    <fullName>Automated Hold</fullName>
                </value>
                <value>
                    <fullName>Late Hold</fullName>
                </value>
                <value>
                    <fullName>LPB Reason</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Direct Debit Reject</fullName>
                    <label>Direct Debit Rejected</label>
                </value>
                <value>
                    <fullName>Credit order return</fullName>
                    <label>Credit order returned</label>
                </value>
                <value>
                    <fullName>Pending Death Claim</fullName>
                </value>
                <value>
                    <fullName>Systematic by Batch</fullName>
                </value>
                <value>
                    <fullName>COE Outstanding</fullName>
                </value>
                <value>
                    <fullName>Loan Paid Up</fullName>
                </value>
                <value>
                    <fullName>Assumed Death</fullName>
                </value>
                <value>
                    <fullName>Fully Paid</fullName>
                </value>
                <value>
                    <fullName>Option Date Hold</fullName>
                </value>
                <value>
                    <fullName>Pre-Lapse</fullName>
                </value>
                <value>
                    <fullName>Non Protect product</fullName>
                    <label>No Protected product in scheme</label>
                </value>
                <value>
                    <fullName>ACI Scheduler on hold</fullName>
                </value>
                <value>
                    <fullName>Broker/Group Rep Transfer</fullName>
                </value>
                <value>
                    <fullName>Do not auto install</fullName>
                </value>
                <value>
                    <fullName>Individual-Declined</fullName>
                </value>
                <value>
                    <fullName>Individual-Approved</fullName>
                    <label>Individual-Approved (Billing setup req)</label>
                </value>
                <value>
                    <fullName>Outstanding Admin Issues</fullName>
                </value>
                <value>
                    <fullName>Passive Billing Unit</fullName>
                </value>
                <value>
                    <fullName>Individual Billed</fullName>
                    <label>Individual Billed - All products on waiver</label>
                </value>
                <value>
                    <fullName>Product Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_PaymentMethod__c</fullName>
        <description>Used for integration to populate Payment Method from source systems (Compass/Lifestyle)</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PaymentMode__c</fullName>
        <description>Used for integration to populate Payment Mode (In Advance or In Arrears)  from source systems (Compass/Lifestyle).</description>
        <label>Payment Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PolicySourceSystem__c</fullName>
        <description>Used for integration to populate the specific source system (Compass/Lifestyle).</description>
        <label>Policy Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PolicyholderFundValue__c</fullName>
        <description>Used for integration to populate Policyholder Fund Value from source systems (Compass/Lifestyle).</description>
        <label>Policyholder Fund Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_PremiumPattern__c</fullName>
        <description>Used for integration to populate Premium Pattern from source systems (Compass/Lifestyle)</description>
        <label>Premium Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RecurringEIFFutureInvestmentPercent__c</fullName>
        <description>Used for integration to populate the Exact Income Fund Future Investment Percentage split from source (Compass/Lifestyle).</description>
        <label>Recurring EIF Future Investment %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_RetirementAge__c</fullName>
        <description>Used for integration to populate Retirement Age from source systems (Compass/Lifestyle)</description>
        <label>Retirement Age</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RetirementAnnuityEmigrationValue__c</fullName>
        <description>Used for integration to populate the Retirement Annuity Emigration Value from source systems (Compass/Lifestyle)</description>
        <label>Retirement Annuity Emigration Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_RetirementDate__c</fullName>
        <description>Used for integration to populate Retirement Date from source systems (Compass/Lifestyle)</description>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_Section14TransferValue__c</fullName>
        <description>Used for integration to populate the Section 14 Transfer Value from source systems (Compass/Lifestyle).</description>
        <label>Section 14 Transfer Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_SmokerRateIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate the Smoker Rate Indicator from source systems (Compass/Lifestyle).</description>
        <label>Smoker Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_SwitchedValue__c</fullName>
        <description>Used for integration to populate SwitchedValue from source systems (Compass/Lifestyle)</description>
        <label>Switched value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_SystematicRedemptionPaymentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Systematic Redemption Payment Indicator from source systems (Compass/Lifestyle).</description>
        <label>Systematic Redemption Payment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_TopUpValue__c</fullName>
        <description>Used for integration to populate TopUpAmount from source systems (Compass/Lifestyle)</description>
        <label>Top-Up Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalFuturePercentage__c</fullName>
        <description>Used for integration to populate the Total Future Investment Fund Percentage from Source (Compass/Lifestyle).</description>
        <label>Total Future %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_TotalPackageDeathValue__c</fullName>
        <description>Used for integration to populate Total Package Death Value Amount from source systems (Compass/Lifestyle)</description>
        <label>Total Package Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalWithdrawalAmount__c</fullName>
        <description>Used for integration to populate Total Withdrawal Amount from source systems (Compass/Lifestyle)</description>
        <label>Total Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TotalWithdrawalDate__c</fullName>
        <description>Used for integration to populate the Total Withdrawal Date from source systems (Compass/Lifestyle).</description>
        <label>Total Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_TransferValue__c</fullName>
        <description>Used for integration to populate Transfer Value from source systems (Compass/Lifestyle)</description>
        <label>Transfer Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_TransferringPolicyNumbers__c</fullName>
        <description>Used for integration to populate Transferring Policy Numbers from source systems (Compass/Lifestyle)</description>
        <label>Transferring Policy Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__APY__c</fullName>
        <label>APY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Address1__c</fullName>
        <description>Street address line 1 for mailing address.</description>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Address2__c</fullName>
        <description>Street address line 2 for mailing address.</description>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ApplicationDate__c</fullName>
        <description>Date when the client submitted the financial account application.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetRebalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Rebalance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AvailableCredit__c</fullName>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AverageBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BalanceLastStatement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Last Statement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BookedDate__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__CashBalance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CashLimit__c</fullName>
        <label>Cash Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__City__c</fullName>
        <description>City for mailing address.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CloseDate__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ClosureReason__c</fullName>
        <description>Reason for closing the financial account.</description>
        <label>Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance Fees</fullName>
                </value>
                <value>
                    <fullName>Account no longer needed</fullName>
                </value>
                <value>
                    <fullName>Moved out of the country</fullName>
                </value>
                <value>
                    <fullName>Not able to maintain account</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CollateralDesc__c</fullName>
        <label>Collateral Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Country__c</fullName>
        <description>Country for mailing address.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentPostedBalance__c</fullName>
        <label>Current Posted Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__DailyWithdrawalLimit__c</fullName>
        <label>Daily Withdrawal Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Discretionary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor has discretionary trading authority for this financial account.</description>
        <label>Discretionary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__DrawPeriodMonths__c</fullName>
        <label>Draw Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__EscrowBalance__c</fullName>
        <label>Escrow Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpectedCloseDate__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountChargesAndFees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges And Fees</label>
        <referenceTo>FinServ__ChargesAndFees__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountSource__c</fullName>
        <description>Indicates source of financial account data, such as a third party integration or manual entry.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>LISP</fullName>
                </value>
                <value>
                    <fullName>Living Annuity</fullName>
                </value>
                <value>
                    <fullName>Pension Preserver</fullName>
                </value>
                <value>
                    <fullName>Provident Preserver</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity (RA)</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Unit trust</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Scrip</fullName>
                </value>
                <value>
                    <fullName>Client Cash</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HardwareSerial__c</fullName>
        <description>The serial number of hardware associated with the account.</description>
        <label>Hardware Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__HeldAway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is managed or administered by our firm.</description>
        <label>Held Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__HoldingCount__c</fullName>
        <description>Number of holdings within this financial account</description>
        <label>Number of Holdings</label>
        <summaryForeignKey>FinServ__FinancialHolding__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this financial account rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Accounts</relationshipLabel>
        <relationshipName>HouseholdFinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IncomingVolume__c</fullName>
        <description>The volume of transactions coming in through the service.</description>
        <label>Incoming Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FAInsurancePolicy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InsuredAmount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <label>Investment Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Tax Optimization</fullName>
                </value>
                <value>
                    <fullName>Liquidity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__JointOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Joint Owner</relationshipLabel>
        <relationshipName>FAJointOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDate__c</fullName>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LienHolder__c</fullName>
        <label>Lien Holder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanAmount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanEndDate__c</fullName>
        <label>Loan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanTermMonths__c</fullName>
        <label>Loan Term(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is actively managed by our firm.</description>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ModelPortfolio__c</fullName>
        <description>The model asset allocation for this financial account.</description>
        <label>Model Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NextStatementDate__c</fullName>
        <description>Next statement date.</description>
        <label>Next Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OpenDate__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
</CustomObject>